@@ -496,6 +496,8 @@ has distmeta => (
 sub _build_distmeta {
   my ($self) = @_;
 
+  require CPAN::Meta::Merge;
+  my $meta_merge = CPAN::Meta::Merge->new(default_version => 2);
   my $meta = {
     'meta-spec' => {
       version => 2,
@@ -518,15 +520,9 @@ sub _build_distmeta {
                     . (defined $self->VERSION ? $self->VERSION : '(undef)')
   };
 
-  require Hash::Merge::Simple;
-  my $dynamic;
   for ($self->plugins_with(-MetaProvider)->flatten) {
-    my $plugin_meta = $_->metadata;
-    $meta = Hash::Merge::Simple::merge($meta, $plugin_meta);
-    $dynamic = 1 if $plugin_meta->{dynamic_config};
+    $meta = $meta_merge->merge($meta, $_->metadata);
   }
-
-  $meta->{dynamic_config} = 1 if $dynamic;
 
   return $meta;
 }
